feat: 问题详情接口完成
