# router/app.go
@@ -11,6 +11,7 @@ func Router() *gin.Engine {
 	// 路由规则
 	r.GET("/ping", service.Ping)
 	r.GET("/problem-list", service.GetProblemList)
+	r.GET("/problem-detail", service.GetProblemDetail)
 
 	return r
 }
