# service/problem.go
@@ -4,6 +4,7 @@ import (
 	"gin_orm_oj/define"
 	"gin_orm_oj/models"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"log"
 	"net/http"
 	"strconv"
@@ -54,5 +55,45 @@ func GetProblemList(c *gin.Context) {
 			"list":  list,
 			"count": count,
 		},
+	})
+}
+
+// GetProblemDetail
+// @Description do ping
+// @Tags 公共方法
+// @Param identity query string false "请输入problem identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /problem-detail [get]
+func GetProblemDetail(c *gin.Context) {
+	identity := c.Query("identity")
+
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "问题唯一标识不能为空",
+		})
+		return
+	}
+
+	data := new(models.ProblemBasic)
+
+	// DAO 查数据， 返回DB对象
+	err := models.DB.Where("identity = ?", identity).First(&data).Error
+
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "数据不存在",
+			})
+			return
+		}
+		log.Println("GetProblemDetail error", err.Error())
+		return
+	}
+	//c.String(http.StatusOK, "Get Problem List")
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": data,
 	})
 }
